# XFusion

./: .gitignore  CMakeLists.txt  FramePool.cpp  Grid.h  IOProcessor.cpp  IOProcessor.h  README.md  XFusion.cpp  XFusion.sln  main.cpp
XFusion/: FramePool.cpp  FramePool.h  Grid.cpp  XFusion.cpp  XFusion.h  XFusion.vcxproj  XFusion.vcxproj.filters  intrinsics.xml  main.cpp
config/: intrinsics_640480.xml
include/: FramePool.h  Grid.h  IOProcessor.h  Shader.h  XFuser.h  XFusion.h  definition.h
shader/: raycastShader.frag  raycastShader_old.frag  vShader.vs
src/: FramePool.cpp  Grid.cpp  IOProcessor.cpp  XFuser.cpp  XFusion.cpp  main.cpp  utils.cpp
